--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '18'
-      Install Packages
+      #Install Packages
       - name: Install Packages
         working-directory: sakigake-informational
         run: npm install
